src/echo_service_deployment_v2.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-v2
  name: echo-v2
spec:
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 8080
  - port: 80
    name: low
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo-v2
---

apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: echo-v2
  name: echo-v2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-v2

  template:
    metadata:
      labels:
        app: echo-v2
    spec:
      containers:
      - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        
        name: echo-v2
        
        ports:
        - containerPort: 8080        
        resources: {}
