src/echo_ingress_aggregate.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /api/1.0
        backend:
          serviceName: echo
          servicePort: 80
      
      - path: /api/2.0
        backend:
          serviceName: echo-v2
          servicePort: 80
